# fastapi-swagger

./: .gitignore  LICENSE  README.md  latest_release.txt  listen_swagger.py  pyproject.toml
.github/workflows/: listen-swagger-changes.yaml  publish.yaml
fastapi_swagger/: __init__.py  main.py
test/: test_fastapi.py
test_app/: app.py
