[tool.poetry]
name = "fastapi-swagger"
version = "0.2.16"
description = "This plugin updates the FastAPI app to host latest Swagger UI distribution."
authors = ["Ruslan Bel'kov <ruslan.belckov@yandex.ru>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
homepage = "https://github.com/dantetemplar/fastapi-swagger"
repository = "https://github.com/dantetemplar/fastapi-swagger"
packages = [
    { include = "fastapi_swagger" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.100"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
ruff = "^0.5.7"
httpx = "^0.27.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
