[project]
name = "fastapi-swagger"
version = "0.3.33"
description = "This plugin updates the FastAPI app to host latest Swagger UI distribution."
authors = [{ name = "Ruslan Bel'kov", email = "ruslan.belckov@yandex.ru" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["fastapi>=0.100"]

[project.urls]
Homepage = "https://github.com/dantetemplar/fastapi-swagger"
Repository = "https://github.com/dantetemplar/fastapi-swagger"

[dependency-groups]
dev = [
    "requests>=2.32.3,<3",
    "ruff>=0.5.7,<0.6",
    "httpx>=0.27.0,<0.28",
    "pytest>=8.3.2,<9",
]

[tool.hatch.build.targets.sdist]
include = ["fastapi_swagger"]

[tool.hatch.build.targets.wheel]
include = ["fastapi_swagger"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
